# vl-saliency

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflow/: ci.yml  publish.yml
.github/workflows/: ci.yml
data/: small_test_data.csv
notebooks/: gemma.ipynb  llava.ipynb  quickstart.ipynb  qwen.ipynb  variations.ipynb
scripts/: env.sh  run_tests.sh  setup_env.sh  start_jupyter.sh
src/vl_saliency/: AGCAM.py  __init__.py  extractor.py  logger.py  logging.py  trace.py  utils.py
src/vl_saliency/assets/: token_style.css
src/vl_saliency/core/: __init__.py  engine.py  extractor.py  localization_heads.py  map.py  trace.py  utils.py
src/vl_saliency/core/head_analysis/: analyze.py
src/vl_saliency/methods/: __init__.py  cam.py  primitives.py  registry.py
src/vl_saliency/selectors/: __init__.py  base.py  functional.py  indexing.py  re.py
src/vl_saliency/transforms/: __init__.py  functional.py  layers.py  localization.py  pipe.py  spatial.py  transforms.py
src/vl_saliency/utils/: transformer_utils.py
src/vl_saliency/viz/: __init__.py  overlay.py  tokens.py
tests/: conftest.py  test_logger.py  test_logging.py  test_trace.py  test_utils.py
tests/core/: conftest.py  test_extractor.py  test_map.py  test_trace.py  test_utils.py
tests/lib/: conftest.py
tests/methods/: test_cam.py  test_primitives.py  test_registry.py
tests/selectors/: test_re.py
tests/transforms/: test_layers.py  test_spatial.py
tests/utils/: test_transformer_utils.py
tests/viz/: test_overlay.py  test_tokens.py
