[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vl-saliency"
version = "0.1.0"
description = "Extracting saliency maps from vision-language models using Attention-Guided CAM (AGCAM)"
authors = [{ name = "Alexander Brady" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "torch>=2.0",
    "transformers>=4.30",
    "einops",
    "matplotlib",
    "numpy",
    "IPython",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vl_saliency = ["assets/*.css"]