[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vl-saliency"
dynamic = ["version"]
description = "Text-to-Image Attention Visualization for Vision-Language Models."
authors = [{ name = "Alexander Brady" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.0",
    "transformers>=4.30",
    "einops",
    "matplotlib",
    "numpy",
    "pillow",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
    "pytest",
    "pytest-cov",
    "ipython",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools_scm]
tag_regex = '^(?:v)?(?P<version>\d+\.\d+\.\d+)$'
fallback_version = "0.0.0"
write_to = "src/vl_saliency/_version.py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]  # basics: style, flakes, isort, pyupgrade, bugbear
ignore = ["E501"]                    # let the formatter handle wrapping

[tool.ruff.lint.isort]
known-first-party = ["vl_saliency"]

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
exclude = ["\\.venv", "env", "build", "dist"]
follow_imports = "skip"  # don't analyze third-party libs
ignore_missing_imports = true